--- a/app/config/config.json
+++ b/app/config/config.json
@@ -15,6 +15,6 @@
             "PingFang SC"
         ],
         "ThemeColor": "#ff009faa",
-        "ThemeMode": "Dark"
+        "ThemeMode": "Auto"
     }
 }
