fix Scroll of Home Page

--- a/app/config/config.json
+++ b/app/config/config.json
@@ -9,6 +9,6 @@
             "PingFang SC"
         ],
         "ThemeColor": "#ff009faa",
-        "ThemeMode": "Auto"
+        "ThemeMode": "Light"
     }
 }
